--- a/practical_exercise1.ipynb
+++ b/practical_exercise1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "practical_exercise1.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AitanMammadova/Introduction_to_Python/blob/main/practical_exercise1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -46,7 +57,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "help()"
       ],
       "metadata": {
         "id": "0w6HGZBvsvru"
@@ -106,13 +117,27 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write your answer and print it on the screen\n"
+        "#Write your answer and print it on the screen\n",
+        "answer = \"Hello, my name is Aytan\"\n",
+        "print(answer)\n"
       ],
       "metadata": {
-        "id": "8S1F2r8NtEoN"
+        "id": "8S1F2r8NtEoN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aee2b041-5d64-4131-fdc0-27016b3c4d3a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, my name is Aytan\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -173,16 +198,45 @@
       "cell_type": "code",
       "source": [
         "#Please assign your age, height and other details you want to share.\n",
+        "my_age = 20\n",
+        "my_height = 1.60\n",
+        "my_hair_color = \"brown\"\n",
+        "my_hometown = \"Azerbaijan\"\n",
+        "where_i_live = \"Azerbaijan\"\n",
+        "\n",
+        "print(\"I am\", str(my_age),\"years old,\",str(my_height),\"tall\",my_hair_color,\"girl from\",my_hometown,\"and I currently live in\",where_i_live)\n",
         "\n",
         "\n",
         "#Check the data type of the variables you want to use.\n",
+        "print(type(my_age))\n",
+        "print(type(my_height))\n",
+        "print(type(my_hair_color))\n",
+        "print(type(my_hometown))\n",
+        "print(type(where_i_live))\n",
         "\n"
       ],
       "metadata": {
-        "id": "MDTV-mOZBVOw"
+        "id": "MDTV-mOZBVOw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "44e6eeff-e170-402b-d722-6b64898dffe3"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am 20 years old, 1.6 tall brown girl from Azerbaijan and I currently live in Azerbaijan\n",
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'str'>\n",
+            "<class 'str'>\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -196,13 +250,33 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write a sentence using the print function to describe yourself using the variables above in the correct data type\n"
+        "#Write a sentence using the print function to describe yourself using the variables above in the correct data type\n",
+        "\n",
+        "my_age = 20\n",
+        "my_height = 1.60\n",
+        "my_hair_color = \"brown\"\n",
+        "my_hometown = \"Azerbaijan\"\n",
+        "where_i_live = \"Azerbaijan\"\n",
+        "\n",
+        "print(\"I am\", str(my_age),\"years old,\",str(my_height),\"tall\",my_hair_color,\"girl from\",my_hometown,\"and I currently live in\",where_i_live)"
       ],
       "metadata": {
-        "id": "0U8slyfyICeJ"
+        "id": "0U8slyfyICeJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0fa8839d-c5d6-4924-ac4f-8e5a6a26e59f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am 20 years old, 1.6 tall brown girl from Azerbaijan and I currently live in Azerbaijan\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -222,7 +296,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Create your list\n"
+        "#Create your list\n",
+        "favorite_places_and_foods = [\"France\", \"Turkey\", \"Egypt\", \"Barcelona\", \"Chicken\", \"Strawberry\", \"Raspberry\", \"Banana\", \"Fish\"]"
       ],
       "metadata": {
         "id": "FHdeAmG6Aw3h"
@@ -249,18 +324,38 @@
       "cell_type": "code",
       "source": [
         "#Create two separate lists for places and foods using the list slicing technique\n",
+        "favorite_places_and_foods = [\"France\", \"Turkey\", \"Egypt\", \"Barcelona\", \"Chicken\", \"Strawberry\", \"Raspberry\", \"Banana\", \"Fish\"]\n",
+        "places = []\n",
+        "foods = []\n",
         "\n",
         "\n",
         "#Select the first and last three from place and food lists\n",
         "\n",
+        "places = favorite_places_and_foods[:3]\n",
+        "foods = favorite_places_and_foods[-3:]\n",
         "\n",
-        "#Print both lists\n"
+        "#Print both lists\n",
+        "print(places)\n",
+        "print(foods)\n"
       ],
       "metadata": {
-        "id": "13LMxJu1CD-F"
+        "id": "13LMxJu1CD-F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7c0faa73-68e0-427f-a479-8fc8dde9bb70"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['France', 'Turkey', 'Egypt']\n",
+            "['Raspberry', 'Banana', 'Fish']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -280,14 +375,31 @@
       "cell_type": "code",
       "source": [
         "#Please import the random module and generate two random numbers between 0 and 2\n",
-        "\n",
-        "#Use the generated numbers as indexes of randomely chosen items from place and food lists\n"
+        "import random\n",
+        "x = random.randint(0,2)\n",
+        "y = random.randint(0,2)\n",
+        "#Use the generated numbers as indexes of randomely chosen items from place and food lists\n",
+        "print(places[x])\n",
+        "print(foods[y])"
       ],
       "metadata": {
-        "id": "krGw2OUtC9y5"
+        "id": "krGw2OUtC9y5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "afa4ac8e-4212-47e7-cd97-5e9881253785"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Egypt\n",
+            "Fish\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -328,28 +440,48 @@
         "\n",
         "#Write your and Amir's preference for each activity either as \"True\" or \"False\"\n",
         "\n",
+        "\n",
         "#First activity\n",
-        "first_activity_your = \n",
-        "first_activity_friend = \n",
+        "first_activity_your = True\n",
+        "first_activity_friend = False\n",
         "\n",
         "#Example statement\n",
-        "print(\"We are going to play chess in the park! Answer:\" ,first_activity_your and first_activity_friend)\n",
+        "print(\"We are going to play  a game of tennis! Answer:\" ,first_activity_your and first_activity_friend)\n",
         " \n",
         "#Second activity\n",
+        "second_activity_your = False\n",
+        "second_activity_friend = True\n",
         "\n",
         " \n",
         "#Your turn to write the statement\n",
+        "print(\"We are going to play chess in the park! Answer:\" ,second_activity_your or second_activity_friend)\n",
         "\n",
         "\n",
         "#Third activity\n",
-        "\n",
-        "#Your turn to write the statement \n"
+        "third_activity_your = True\n",
+        "third_activity_friend = True\n",
+        "#Your turn to write the statement \n",
+        "print(\"We are going to the museum! Answer:\" ,third_activity_your and third_activity_friend)\n"
       ],
       "metadata": {
-        "id": "sNIV7420Yk-Y"
+        "id": "sNIV7420Yk-Y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d1ac8f7-1088-4951-c628-2b4d507aaf2b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "We are going to play  a game of tennis! Answer: False\n",
+            "We are going to play chess in the park! Answer: True\n",
+            "We are going to the museum! Answer: True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -368,15 +500,54 @@
       "cell_type": "code",
       "source": [
         "#Create a variable for your trip date that asks Amir for an input\n",
+        "time = input(\"Please enter date for our trip: \")\n",
         "\n",
-        "\n",
-        "#Print the date for the trip by using it in a sentence\n"
+        "#Print the date for the trip by using it in a sentence\n",
+        "print(time)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "jGxVfccGEMZB"
+        "id": "jGxVfccGEMZB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "377a2a98-508f-463e-de54-5386bfe656e0"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter date for our trip: 2022-12-3\n",
+            "2022-12-3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd '/content/drive/My Drive'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8-3DgTbIIOdL",
+        "outputId": "de41eb4b-d7fd-4699-870b-9326b9bb3d6e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Errno 2] No such file or directory: '/content/drive/My Drive'\n",
+            "/content\n"
+          ]
+        }
+      ]
     }
   ]
 }
